--- a/index.html
+++ b/index.html
@@ -1,98 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>LOL ! AH !</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body>
-  <div id="banner">
-    <h1>Shape your board</h1>
-    <p>Un reférencement national</p>
-    <a href="#" class="btn btn-primary btn-lg">cliquez!!!</a>
-  </div>
-
-<div class="container">
-  <div class="row"> 
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    </div>
-
-  <div class="box">
-    <h2>Du sérieux</h2>
-    <p>Modélise ta <strong>planche</strong></p>
-    <img src="images/briefcase.png" alt="une description aléatoire" width="100" >
-  </div>
-<div class="col-xs-12 col-sm-6 col-md-3">
-    </div>
-
- <div class="box">
-    <h2>Un référencement national</h2>
-    <p>le site le plus visité de  <strong>france et de navarre</strong></p>
-    <img src="images/laptop.png" alt="une description aléatoire" width="100" >
-  </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    </div>
-
-<div class="box">
-    <h2>Du lol</h2>
-    <p>le site le plus <strong>drôle</strong></p>
-    <img src="images/diamond.png" alt="une description aléatoire" width="100" >
-  </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-    </div>
-
-<div class="box">
-    <h2>international</h2>
-    <p>le site le plus étendu au niveau <strong>mondial  </strong></p>
-    <img src="images/heart.png" alt="une description aléatoire" width="100" >
-  </div>
-   </div>
-</div>
-
-  <div id="footer">
-    <p>Your turn ;)</p>
-    <ul class=list-inline>
-        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-github"></i></a></li>
-    </ul>
-  </div>
-
-</body>
+	<head>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+		<title>Create your board</title>
+		<link rel='stylesheet' href='style.css'>
+	</head>
+	<body>
+		<header>
+			<div>
+				<h1>Create your Board</h1>
+				<p>A 4 steps tutorial</p>
+			</div>
+		</header>
+		<div class="boardbutton">
+			<a href="create-your-board.html">
+				<div>
+					<h2>Start <strong>NOW</strong></h2>
+				</div>
+			</a>
+		</div>
+	</body>
 </html>
-
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link href='style.css' rel='stylesheet'>
-</head>
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-3">
-      <!-- div class="card" -->
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-      <!-- div class="card" -->
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-      <!-- div class="card" -->
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-3">
-      <!-- div class="card" -->
-    </div>
-  </div>
-</div>
-
-
